<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/welcome_to_the_daily_quotes"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="317dp"
        android:layout_height="278dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"

        android:layout_marginEnd="40dp"
        android:layout_marginBottom="181dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <ImageView
            android:id="@+id/card_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg" />

        <ImageView
            android:id="@+id/btn_like"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/like"
            android:src="@drawable/ic_baseline_favoritenot_24" />

        <ImageView
            android:id="@+id/btn_shere"
            android:layout_width="35dp"
            android:layout_height="36dp"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/shere"
            android:src="@drawable/ic_baseline_share_24" />



        <TextView
            android:id="@+id/quoteView"
            android:layout_width="292dp"
            android:padding="10dp"
            android:textSize="26sp"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:layout_height="208dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="12dp"/>


    </androidx.cardview.widget.CardView>





    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginBottom="80dp"
        android:text="@string/refresh_page"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/clickme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_me"
        android:textColor="#ED0505"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>